prevent the background from overriding the z-index of blocks with containers

--- a/src/components/div/style.scss
+++ b/src/components/div/style.scss
@@ -14,7 +14,11 @@
 		bottom: 0;
 		z-index: 2;
 	}
-	> * {
+
+	// Prevents blocks with links from being contained within the content
+	> *
+	:not(.stk-block-column__content, .stk-block-team-member__content, .stk-block-card .stk-container, .stk-block-testimonial__content,
+	.stk-block-pricing-box__content, .stk-block-call-to-action__content) {
 		position: relative;
 		z-index: 3;
 	}
